--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,23 @@
-name: Release
+name: CI
 
 on:
   push:
     branches:
-      - main  # veya master
+      - main
+
+permissions:
+  contents: write
+  issues: write
 
 jobs:
   release:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -23,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run Semantic Release
+      - name: Release
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
