--- a/Documentation/osLinux_Documentation.desktop
+++ b/Documentation/osLinux_Documentation.desktop
@@ -2,5 +2,5 @@
 Encoding=UTF-8
 Name=DevToolkit Suite Docs
 Type=Link
-URL=https://ogb-crew.gitbook.io/devtoolkit-suite
+URL=https://ogb-crew.gitbook.io/devtoolkit-suite/basics/editor
 Icon=text-html
